# gof_design_patterns

./: .gitignore  CMakeLists.txt  README.md
AbstractFactory/: CMakeLists.txt
AbstractFactory/include/AbstractFactory/: AndroidButton.h  AndroidFactory.h  AndroidLabel.h  AndroidPanel.h  ButtonInterface.h  IButton.h  ILabel.h  IOSButton.h  IOSFactory.h  IOSLabel.h  IOSPanel.h  IPanel.h  LabelInterface.h  PanelInterface.h  SquareBoard.h  UIFactory.h  UIFactoryInterface.h
AbstractFactory/include/AbstractFactory/Android/: AndroidButton.h  AndroidFactory.h  AndroidLabel.h  AndroidPanel.h
AbstractFactory/include/AbstractFactory/IOS/: IOSButton.h  IOSFactory.h  IOSLabel.h  IOSPanel.h
AbstractFactory/src/: main.cpp
AbstractFactory/src/AbstractFactory/: AndroidButton.cpp  AndroidFactory.cpp  AndroidLabel.cpp  AndroidPanel.cpp  IOSButton.cpp  IOSFactory.cpp  IOSLabel.cpp  IOSPanel.cpp  SquareBoard.cpp
AbstractFactory/src/AbstractFactory/Android/: AndroidButton.cpp  AndroidFactory.cpp  AndroidLabel.cpp  AndroidPanel.cpp
AbstractFactory/src/AbstractFactory/IOS/: IOSButton.cpp  IOSFactory.cpp  IOSLabel.cpp  IOSPanel.cpp
Builder/: CMakeLists.txt
Builder/include/Builder/: IOrderable.h  Order.h  Pizza.h  PizzaBuilder.h  Size.h  StuffedCrust.h  Topping.h
Builder/src/: main.cpp
Builder/src/Builder/: Order.cpp  Pizza.cpp  PizzaBuilder.cpp
Builder/test/: CMakeLists.txt
Builder/test/Builder/: OrderTest.cpp  PizzaTest.cpp
ChainOfResponsibility/: CMakeLists.txt
ChainOfResponsibility/include/ChainOfResponsibility/: ATMBankHandler.h  ATMStation.h  BankOption.h  Citibank.h  HSBC.h  Itau.h  Santander.h
ChainOfResponsibility/src/: main.cpp
ChainOfResponsibility/src/ChainOfResponsibility/: ATMBankHandler.cpp  ATMLStation.cpp  Citibank.cpp  HSBC.cpp  Itau.cpp  Santander.cpp
Command/: CMakeLists.txt
Command/include/Command/: Action.h  Calculator.h  Command.h  Invoker.h  Receiver.h
Command/include/Command/Factory/: CalculatorCommandFactory.h  CommandFactory.h  DivideFactory.h  MultiplyFactory.h  SubtractFactory.h  SumFactory.h
Command/include/Command/Function/: Divide.h  Multiply.h  Subtract.h  Sum.h
Command/include/Command/Operation/: Addition.h  Division.h  Multiplication.h  Subtraction.h
Command/src/: main.cpp
Command/src/Command/: Calculator.cpp  Invoker.cpp  Receiver.cpp
Command/src/Command/Factory/: CalculatorCommandFactory.cpp  DivideFactory.cpp  (+3 more)
Facade/: CMakeLists.txt
Facade/include/Facade/: Car.h  InventoryService.h  PaymentService.h  Renter.h  RentingServiceFacade.h
Facade/src/: main.cpp
Facade/src/Facade/: Car.cpp  InventoryService.cpp  PaymentService.cpp  Renter.cpp  RentingServiceFacade.cpp
FactoryMethod/: CMakeLists.txt
FactoryMethod/include/FactoryMethod/: ICar.h  ICarFactory.h  ModelS.h  NissanFactory.h  Skyline.h  TeslaFactory.h
FactoryMethod/src/: main.cpp
FactoryMethod/src/FactoryMethod/: ModelS.cpp  NissanFactory.cpp  Skyline.cpp  TeslaFactory.cpp
Flyweight/: CMakeLists.txt
Flyweight/include/Flyweight/: AbstractItem.h  Enemy.h  IItemFlyweight.h  ItemFactory.h  ItemType.h  LandMine.h  Lego.h  Player.h  Point.h
Flyweight/src/: main.cpp
Flyweight/src/Flyweight/: AbstractItem.cpp  Enemy.cpp  ItemFactory.cpp  LandMine.cpp  Lego.cpp  Player.cpp  Point.cpp
Interpreter/: CMakeLists.txt
Interpreter/include/Interpreter/: Hundred.h  InterpreterContext.h  One.h  RomanNumberInterpreter.h  Ten.h  Thousand.h
Interpreter/src/: main.cpp
Interpreter/src/Interpreter/: Hundred.cpp  InterpreterContext.cpp  One.cpp  RomanNumberInterpreter.cpp  Ten.cpp  Thousand.cpp
Mediator/: CMakeLists.txt
Mediator/include/Mediator/: ITrafficSignal.h  ITrafficSignalsMediator.h  PedestrianControlLight.h  SemaphoreLight.h  Signal.h  TrafficSignal.h  TrafficSignalsMediator.h
Mediator/src/: main.cpp
Mediator/src/Mediator/: PedestrianControlLight.cpp  SemaphoreLight.cpp  TrafficSignal.cpp  TrafficSignalsMediator.cpp
Prototype/: CMakeLists.txt
Prototype/include/Prototype/: BlackSquare.h  CheckersBoard.h  ISquare.h  SquareOption.h  WhiteSquare.h
Prototype/src/: main.cpp
Prototype/src/Prototype/: BalackSquare.cpp  CheckersBoard.cpp  WhiteSquare.cpp
Singleton/: CMakeLists.txt
Singleton/include/Singleton/: Authentication.h  Authorization.h  Printer.h  Session.h
Singleton/src/: main.cpp
Singleton/src/Singleton/: Authentication.cpp  Authorization.cpp  Printer.cpp  Session.cpp
Singleton/test/: CMakeLists.txt
Singleton/test/Singleton/: SessionTest.cpp
State/: CMakeLists.txt  README.md
State/include/State/: AbstractState.h  CalculationHandler.h  EmptyState.h  Engine.h  IState.h  OperandLeftState.h  OperandRightState.h  Operation.h  OperationState.h  ResultState.h  State.h  StateContext.h  StateMachine.h
State/src/: main.cpp
State/src/State/: AbstractState.cpp  CalculationHandler.cpp  EmptyState.cpp  Engine.cpp  OperandLeftState.cpp  OperandRightState.cpp  OperationState.cpp  ResultState.cpp  StateContext.cpp  StateMachine.cpp
TemplateMethod/: CMakeLists.txt
TemplateMethod/include/TemplateMethod/: AudioSource.h  FileAudioSource.h  GenericAudioPlayer.h  StreamingAudioSource.h
TemplateMethod/src/: main.cpp
TemplateMethod/src/TemplateMethod/: AudioSource.cpp  FileAudioSource.cpp  GenericAudioPlayer.cpp  StreamingAudioSource.cpp
Visitor/: CMakeLists.txt
Visitor/include/Visitor/: AbstractEmployee.h  AmountHoursAndPayReport.h  CommissionEmployee.h  CommissionedEmployee.h  EmployeeInterface.h  EmployeeVisitableInterface.h  EmployeeVisitorInterface.h  HourlyEmployee.h  IEmployee.h  IEmployeeVisitor.h  NumberOfHoursAndPayReport.h  SalariedEmployee.h
Visitor/src/: main.cpp
Visitor/src/Visitor/: AbstractEmployee.cpp  AmountHoursAndPayReport.cpp  CommissionEmployee.cpp  CommissionedEmployee.cpp  HourlyEmployee.cpp  NumberOfHoursAndPayReport.cpp  SalariedEmployee.cpp
Visitor/test/: CMakeLists.txt
Visitor/test/Visitor/: AmountHoursAndPayReportTest.cpp
Visitor/tests/: CMakeLists.txt
Visitor/tests/Visitor/: CommissionedEmployeeTest.cpp  HourlyEmployeeTest.cpp  NumberOfHoursAndPayReportTest.cpp  SalariedEmployeeTest.cpp
(+126 files in other folders)
