SET(MODULE_NAME "Command")
SET(MODULE_DIRECTORY "Command")

set(CMAKE_C_COMPILER /usr/bin/gcc)
set(CMAKE_CXX_COMPILER /usr/bin/g++)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

# Including source code
set(PROJECT_SOURCE_DIR ${CMAKE_HOME_DIRECTORY}/${MODULE_DIRECTORY}/src)
set(PROJECT_INCLUDE_DIR ${CMAKE_HOME_DIRECTORY}/${MODULE_DIRECTORY}/include)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/${MODULE_DIRECTORY}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/${MODULE_DIRECTORY}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/${MODULE_DIRECTORY}/bin)

file(GLOB COMMAND_SOURCE_FILES_TOP "${PROJECT_SOURCE_DIR}/${MODULE_DIRECTORY}/*.cpp")
file(GLOB_RECURSE COMMAND_SOURCE_FILES_NESTED
    ${PROJECT_SOURCE_DIR}/${MODULE_DIRECTORY}/Factory/*.cpp
    ${PROJECT_SOURCE_DIR}/${MODULE_DIRECTORY}/Function/*.cpp
    ${PROJECT_SOURCE_DIR}/${MODULE_DIRECTORY}/Operation/*.cpp
)

set(COMMAND_SOURCE_FILES ${COMMAND_SOURCE_FILES_TOP} ${COMMAND_SOURCE_FILES_NESTED})

include_directories("${PROJECT_INCLUDE_DIR}")
include_directories("${PROJECT_SOURCE_DIR}")

add_library(${MODULE_NAME} SHARED ${COMMAND_SOURCE_FILES})
target_include_directories(${MODULE_NAME} PUBLIC ${PROJECT_INCLUDE_DIR})

add_executable(CommandPattern ${PROJECT_SOURCE_DIR}/main.cpp)
target_link_libraries(CommandPattern ${MODULE_NAME})
